--- a/ui/assets/styles/dark-theme.css
+++ b/ui/assets/styles/dark-theme.css
@@ -2940,7 +2940,6 @@ section {
     display: flex;
     flex: 1;
     justify-content: space-between;
-    background-color: #0e1012;
     margin-top: -3px; }
   .filter-container.tabfilter-container nav > ul > li {
     margin: 0 3px 5px 0;
