--- a/ui/assets/styles/hc-light.css
+++ b/ui/assets/styles/hc-light.css
@@ -2912,7 +2912,6 @@ section {
     display: flex;
     flex: 1;
     justify-content: space-between;
-    background-color: #ffffff;
     margin-top: -3px; }
   .filter-container.tabfilter-container nav > ul > li {
     margin: 0 3px 5px 0;
